--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
+        "@vueform/multiselect": "^2.6.2",
         "artisan": "^0.1.2",
         "bootstrap": "^5.1.3",
         "composer": "^4.1.0",
