--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "bootstrap": "^5.1.3",
         "composer": "^4.1.0",
         "jquery": "^3.6.0",
+        "sweetalert2": "^11.7.20",
         "vform": "^2.1.2",
         "vuex": "^4.0.2"
     }
