--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "composer": "^4.1.0",
         "jquery": "^3.6.0",
         "sweetalert2": "^11.7.20",
+        "tiny-emitter": "^2.1.0",
         "vform": "^2.1.2",
         "vuex": "^4.0.2"
     }
