--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "devDependencies": {
         "@vue/compiler-sfc": "^3.2.37",
         "axios": "^0.27.2",
+        "laravel-echo": "^1.15.2",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "pusher-js": "^8.3.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.53.0",
         "sass-loader": "^12.1.0",
