--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@vueform/multiselect": "^2.6.2",
         "artisan": "^0.1.2",
         "bootstrap": "^5.1.3",
+        "chart.js": "^4.3.3",
         "composer": "^4.1.0",
         "jquery": "^3.6.0",
         "moment": "^2.29.4",
