--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
         "chart.js": "^4.3.3",
         "composer": "^4.1.0",
         "jquery": "^3.6.0",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.5.31",
         "moment": "^2.29.4",
         "sweetalert2": "^11.7.20",
         "tiny-emitter": "^2.1.0",
         "vform": "^2.1.2",
-        "vuex": "^4.0.2"
+        "vuex": "^4.0.2",
+        "xlsx": "^0.18.5"
     }
 }
