localization added in localization branch

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "sweetalert2": "^11.7.20",
         "tiny-emitter": "^2.1.0",
         "vform": "^2.1.2",
+        "vue-i18n": "^9.2.2",
         "vuex": "^4.0.2",
         "xlsx": "^0.18.5"
     }
